# Shadow

./: .gitignore  README.md
Arnold_windows/: version.txt
Arnold_windows/include/: ai.h  ai_allocate.h  ai_api.h  ai_array.h  ai_bbox.h  ai_cameras.h  ai_color.h  ai_constants.h  ai_critsec.h  ai_deprecated.h  ai_dotass.h  ai_driver_utils.h  ai_drivers.h  ai_enum.h  ai_filters.h  ai_license.h  ai_matrix.h  ai_metadata.h  ai_msg.h  ai_node_entry.h  ai_nodes.h  ai_noise.h  ai_params.h  ai_plugins.h  ai_pointcloud.h  ai_procedural.h  ai_ray.h  ai_render.h  ai_sampler.h  ai_shader_aovs.h  ai_shader_brdf.h  ai_shader_lights.h  ai_shader_message.h  ai_shader_parameval.h  ai_shader_radiance.h  ai_shader_sample.h  ai_shader_sss.h  ai_shader_userdef.h  ai_shader_util.h  ai_shader_volume.h  (+11 more)
Arnold_windows/lib/: ai.lib
Scripts/: README.md  arnold_env.py  ass_tex_replacer.py  file_finder.py  lose_finder.py  maya_render_script_gen.py  path_replacer.py  texture_convertor.py
ass_tex_analysis/: ass_tex_analysis.pro  assfile.cpp  assfile.h  main.cpp  mainwindow.cpp  mainwindow.h  texture.cpp  texture.h  texturetable.cpp  texturetable.h  texturetablemodel.cpp  texturetablemodel.h
doc/: publish_qt_app.bat
doc/houdini_cmake/: CMakeLists.txt  start_cmake_gui.bat
gpattern/: sop_gpattern.cpp  vray_gpattern.cpp  vray_gpattern.h
libcurl/lib/: libcurl_debug.exp  libcurl_debug.lib
libs/libcurl/lib/: libcurl.exp  libcurl.lib
sop_gpattern/: CMakeLists.txt  sop_gpattern.h
sop_path_deformer/: CMakeLists.txt  sop_pathdeform.cpp
vray_gpattern/: CMakeLists.txt
vray_tile_proc/: CMakeLists.txt  vray_tile_proc.cpp  vray_tile_proc.h
